[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandapower>=3.1.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
]
